Histogram - requestData function removed.

--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -6,7 +6,7 @@
   .ylabel {
     writing-mode: sideways-lr;
     text-align: center;
-    color: var(--color-font-mid);
+    color: var(--color-font);
   }
 
   .bucket {
@@ -64,7 +64,7 @@
 .histogram-xlabel {
   position: relative;
   text-align: center;
-  color: var(--color-font-mid);
+  color: var(--color-font);
   margin: 0.5em 0;
 }
 
