Move dictionaries to public; Loaded with utils.

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -244,6 +244,11 @@
       }
     }
 
+    if (mapp.language !== 'en') {
+
+      await mapp.utils.loadDictionary(mapp.language)
+    }
+
     // Restore scroll
     if ('scrollRestoration' in history) history.scrollRestoration = 'auto';
 
