Move dictionaries to public; Loaded with utils. (#2213)
Co-authored-by: AlexGeere <alex.geere@geolytix.co.uk>
Co-authored-by: Agata Brok <cityremade@users.noreply.github.com>

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -230,18 +230,15 @@
     }
 
     // Language as URL parameter will override user language.
-    if (mapp.hooks.current.language) {
-      mapp.language = mapp.hooks.current.language;
-    } else if (mapp.user?.language) {
-      if (!Object.hasOwn(mapp.dictionaries, mapp.user.language)) {
-        // Set mapp.language to english if user.language is not supported by mapp.dictionaries.
-        console.warn(
-          `'${mapp.user.language}' mapp.language is not supported by mapp.dictionaries.`,
-        );
-        mapp.language = 'en';
-      } else {
-        mapp.language = mapp.user.language;
-      }
+    mapp.language = mapp.hooks.current.language || mapp.user?.language || 'en';
+
+    // Load dictionary if language other than English.
+    if (mapp.language !== 'en') {
+      await mapp.utils.loadDictionary(mapp.language);
+    }
+
+    if (!Object.hasOwn(mapp.dictionaries, mapp.language)) {
+      console.warn(`'${mapp.user.language}' mapp.language is not supported by mapp.dictionaries.`);
     }
 
     // Restore scroll
