layer.update method

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -22,6 +22,8 @@
 
 @import url('./elements/_dropdown.css');
 
+@import url('./elements/_jse.css');
+
 @import url('./elements/_key.css');
 
 @import url('./elements/_pills.css');
