--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -6,8 +6,14 @@
   width: 100%;
 
   & .label-row {
-    grid-row: 1;
+    grid-row: 3;
     grid-column: 1 / 3;
+
+    input {
+      min-width: 4em;
+      border: 1px solid var(--color-border);
+      border-radius: 3px;
+    }
   }
 
   & .track-bg {
