--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -2,6 +2,7 @@
   --dif: calc(var(--max) - var(--min));
   display: grid;
   grid-template-columns: 50% 50%;
+  grid-gap: 0.2em;
   position: relative;
   width: 100%;
 
