--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -819,6 +819,7 @@ dialog {
   --dif: calc(var(--max) - var(--min));
   display: grid;
   grid-template-columns: 50% 50%;
+  grid-gap: 0.2em;
   position: relative;
   width: 100%;
   & .label-row {
