Histogram bars - softer edges at the bottom.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1136,6 +1136,8 @@ dialog {
     flex-grow: 1;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    border-bottom-left-radius: 1px;
+    border-bottom-right-radius: 1px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     div.bucket-info {
       position: absolute;
