--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -4,7 +4,7 @@
   gap: 0.5em;
 
   .ylabel {
-    writing-mode: sideways-lr;
+    writing-mode: sideways-rl;
     text-align: center;
     color: var(--color-font);
   }
