--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -187,6 +187,9 @@ body {
   & .switch.disabled {
     opacity: 0.5;
   }
+  .legend-icon {
+    display: flex;
+  }
 }
 
 /* public/css/layout/_infotip.css */
