Histogram - numbers - language sensitive formatting;

--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -26,6 +26,7 @@
     div.bucket-info {
       position: absolute;
       min-width: 60px;
+      white-space: nowrap;
       background-color: var(--color-primary);
       color: var(--color-font-contrast);
       display: inline-block;
