--- a/public/css/layout/_histogram.css
+++ b/public/css/layout/_histogram.css
@@ -17,6 +17,8 @@
     flex-grow: 1;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    border-bottom-left-radius: 1px;
+    border-bottom-right-radius: 1px;
     box-shadow:
       rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
       rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -24,6 +26,7 @@
     div.bucket-info {
       position: absolute;
       min-width: 60px;
+      white-space: nowrap;
       background-color: var(--color-primary);
       color: var(--color-font-contrast);
       display: inline-block;
