--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -826,11 +826,17 @@ dialog {
   --dif: calc(var(--max) - var(--min));
   display: grid;
   grid-template-columns: 50% 50%;
+  grid-gap: 0.2em;
   position: relative;
   width: 100%;
   & .label-row {
-    grid-row: 1;
+    grid-row: 3;
     grid-column: 1 / 3;
+    input {
+      min-width: 4em;
+      border: 1px solid var(--color-border);
+      border-radius: 3px;
+    }
   }
   & .track-bg {
     grid-row: 2;
@@ -915,27 +921,22 @@ dialog {
 }
 .input-range input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  border: none;
   width: 20px;
-  height: 40px;
-  border-radius: 0;
+  height: 20px;
   pointer-events: auto;
   cursor: pointer;
-  background: url('data:image/svg+xml,%0A<svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg">%0A  <circle cx="5" cy="5" r="4" fill="%23E18335"/>%0A</svg>');
-  background-repeat: no-repeat;
-  background-position: center;
-  box-shadow: none;
+  border: 3px solid var(--color-border);
+  border-radius: 50%;
+  background-color: var(--color-primary);
 }
 .input-range input[type=range]::-moz-range-thumb {
-  border: none;
-  width: 20px;
-  height: 40px;
-  border-radius: 0;
+  width: 14px;
+  height: 14px;
   pointer-events: auto;
   cursor: pointer;
-  background: url('data:image/svg+xml,%0A<svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg">%0A  <circle cx="5" cy="5" r="4" fill="%23E18335"/>%0A</svg>');
-  background-repeat: no-repeat;
-  background-position: center;
+  border: 3px solid var(--color-border);
+  border-radius: 50%;
+  background-color: var(--color-primary);
   box-shadow: none;
 }
 
@@ -1142,10 +1143,13 @@ dialog {
     flex-grow: 1;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
+    border-bottom-left-radius: 1px;
+    border-bottom-right-radius: 1px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     div.bucket-info {
       position: absolute;
       min-width: 60px;
+      white-space: nowrap;
       background-color: var(--color-primary);
       color: var(--color-font-contrast);
       display: inline-block;
