--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -37,6 +37,22 @@
   user-select: none;
 }
 
+.outlined {
+  border: 1px solid var(--color-primary);
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  width: auto;
+  min-width: 5em;
+  max-width: 10em;
+  margin: 1px;
+  text-overflow: ellipsis;
+  text-align: center;
+
+  &.active {
+    border: 1px solid var(--color-active);
+  }
+}
+
 .val-changed {
   input[type='number'],
   input[type='text'],
