--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -825,7 +825,7 @@ dialog {
 .input-range {
   --dif: calc(var(--max) - var(--min));
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 0.2em;
   position: relative;
   width: 100%;
