--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -49,6 +49,9 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+.link-with-img {
+  display: flex;
+}
 .link-with-img > * {
   display: inline-block;
   vertical-align: middle;
@@ -62,10 +65,6 @@ body {
   border: 1px solid var(--color-primary);
   border-radius: 5px;
   padding: 0.2em 0.5em;
-  width: auto;
-  min-width: 5em;
-  max-width: 10em;
-  margin: 1px;
   text-overflow: ellipsis;
   text-align: center;
   &.active {
