--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -16,13 +16,13 @@
     >
 
     <link
-      href="https://unpkg.com/tabulator-tables@6.3.1/dist/css/tabulator.min.css"
+      href="https://cdn.jsdelivr.net/npm/tabulator-tables@6.3.1/dist/css/tabulator.min.css"
       rel="stylesheet"
     >
 
     <script
       type="text/javascript"
-      src="https://unpkg.com/tabulator-tables@6.3.1/dist/js/tabulator.min.js"
+      src="https://cdn.jsdelivr.net/npm/tabulator-tables@6.3.1/dist/js/tabulator.min.js"
       integrity="sha384-SKSq3cuuVWdfrjtLz9wNlqE0bMc903yMS5zGnFtwvfddplgxa1hywtiLyw1CbSHO"
       crossorigin="anonymous"
     ></script>
