CSS - common - outlined class. (#2297)
* CSS - common - outlined class.

common stylesheet now had .outlined class which can be applied on buttons and other containers in order to create a border that makes the element stand out within content.

* doc stub

* Optional outline on links.

* Docs;

* Defaults;

* Link - now only a hyperlink with inline content.

* Data id included;

* css changes

* Report Tweaks

1. Allow report type to use another icon if defined
2. entry.report if statement must happen prior to the nullish assignment of variables or you always end up with a link icon

* Optional element width.

* content-width for link

* link_class

* format document

* add alignment to link-with-img

* .link-with-img css

---------

Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: Simon Leech <56163132+simon-leech@users.noreply.github.com>
Co-authored-by: AlexGeere <alex.geere@gmail.com>

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -49,14 +49,25 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
-.link-with-img > * {
-  display: inline-block;
-  vertical-align: middle;
+.link-with-img {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  text-align: center;
+  text-overflow: ellipsis;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+.outlined {
+  border: 1px solid var(--color-primary);
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  &.active {
+    border: 1px solid var(--color-active);
+  }
 }
 .val-changed {
   input[type=number],
