--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -66,6 +66,7 @@ body {
   input[type=datetime-local],
   textarea,
   button,
+  .select-dropdown,
   .dropdown > .head {
     background-color: var(--color-changed);
     color: var(--color-font);
