css for content height

--- a/public/css/elements/_dialog.css
+++ b/public/css/elements/_dialog.css
@@ -61,6 +61,14 @@ dialog {
     user-select: none;
     padding: 5px;
     overflow: unset !important;
+
+    & > .content {
+      & > .filter-list {
+        max-height: 350px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+      }
+    }
   }
 
   &.modal {
