--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -7,7 +7,7 @@
   width: 100%;
 
   & .label-row {
-    grid-row: 3;
+    grid-row: 2;
     grid-column: 1 / 3;
 
     input {
@@ -17,8 +17,15 @@
     }
   }
 
+  & .minmax-row {
+    grid-row: 4;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+  }
+
   & .track-bg {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1 / 3;
     background: linear-gradient(
       0deg,
@@ -31,7 +38,7 @@
 
   &.single::after {
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 3;
     background: linear-gradient(
       0deg,
       transparent 0 45%,
@@ -56,7 +63,7 @@
     &::before,
     &::after {
       grid-column: 1 / 3;
-      grid-row: 2;
+      grid-row: 3;
       background: linear-gradient(
         0deg,
         transparent 0 45%,
@@ -92,7 +99,7 @@
     -webkit-appearance: none;
     appearance: none;
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 3;
     z-index: 3;
     top: 0;
     left: 0;
