--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -842,7 +842,7 @@ dialog {
   position: relative;
   width: 100%;
   & .label-row {
-    grid-row: 3;
+    grid-row: 2;
     grid-column: 1 / 3;
     input {
       min-width: 4em;
@@ -850,8 +850,14 @@ dialog {
       border-radius: 3px;
     }
   }
+  & .minmax-row {
+    grid-row: 4;
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+  }
   & .track-bg {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 1 / 3;
     background:
       linear-gradient(
@@ -863,7 +869,7 @@ dialog {
   }
   &.single::after {
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 3;
     background:
       linear-gradient(
         0deg,
@@ -885,7 +891,7 @@ dialog {
     &::before,
     &::after {
       grid-column: 1 / 3;
-      grid-row: 2;
+      grid-row: 3;
       background:
         linear-gradient(
           0deg,
@@ -908,7 +914,7 @@ dialog {
     -webkit-appearance: none;
     appearance: none;
     grid-column: 1 / 3;
-    grid-row: 2;
+    grid-row: 3;
     z-index: 3;
     top: 0;
     left: 0;
