--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -26,6 +26,8 @@
 
 @import url('./elements/_key.css');
 
+@import url('./elements/_loading.css');
+
 @import url('./elements/_pills.css');
 
 @import url('./elements/_searchbox.css');
