--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -756,6 +756,32 @@ dialog {
   }
 }
 
+/* public/css/elements/_loading.css */
+@property --border-angle { syntax: "<angle>"; initial-value: 0deg; inherits: false; }
+@keyframes border-angle-rotate {
+  from {
+    --border-angle: 0deg;
+  }
+  to {
+    --border-angle: 360deg;
+  }
+}
+.loading {
+  --border-angle: 0deg;
+  border: 0.5em solid transparent !important;
+  border-radius: 5px;
+  animation: border-angle-rotate 4s linear infinite;
+  background:
+    linear-gradient(var(--color-base), var(--color-base)) padding-box,
+    conic-gradient(
+      from var(--border-angle),
+      var(--color-primary),
+      var(--color-base),
+      var(--color-primary),
+      var(--color-base),
+      var(--color-primary)) border-box;
+}
+
 /* public/css/elements/_pills.css */
 .pill-container {
   display: flex;
