Add notranslate class to material-symbols-outlined class elements

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -189,8 +189,14 @@
 
     <div id="ctrls">
       <div id="ctrl-tabs" class="hover">
-        <div data-id="layers" class="active material-symbols-outlined"></div>
-        <div data-id="locations" class="material-symbols-outlined"></div>
+        <div
+          data-id="layers"
+          class="active notranslate material-symbols-outlined"
+        ></div>
+        <div
+          data-id="locations"
+          class="notranslate material-symbols-outlined"
+        ></div>
       </div>
 
       <div id="ctrl-panel">
