--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1464,6 +1464,13 @@ dialog {
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
+      cursor: pointer;
+      > .close_tab {
+        font-size: 0.8em;
+        position: relative;
+        left: -0.8em;
+        padding-bottom: 2.1em;
+      }
     }
     & > .tab.active > .header {
       background-color: var(--color-base-tertiary);
