--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1468,8 +1468,11 @@ dialog {
       > .close_tab {
         font-size: 0.8em;
         position: relative;
-        left: -0.8em;
+        right: -97%;
         padding-bottom: 2.1em;
+      }
+      button {
+        padding-right: 5px;
       }
     }
     & > .tab.active > .header {
