--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1461,7 +1461,7 @@ dialog {
       border-radius: 3px 1em 0 0;
       padding-top: 10px;
       padding-bottom: 10px;
-      justify-content: space-between;
+      justify-content: space-around;
       padding-left: 10px;
       -webkit-user-select: none;
       -moz-user-select: none;
@@ -1469,9 +1469,8 @@ dialog {
       user-select: none;
       cursor: pointer;
       > .close_tab {
-        font-size: 0.8em;
+        font-size: 0.9em;
         position: relative;
-        padding-bottom: 2.1em;
       }
       button {
         padding-right: 5px;
