--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -38,6 +38,7 @@
       padding-bottom: 10px;
       justify-content: space-around;
       padding-left: 10px;
+      padding-right: 5px;
       -webkit-user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
