Specify the lang property for the user admin view template

--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head data-user="{{user}}" data-dir="{{dir}}">
     <title>XYZ | User Administration</title>
     <link
