--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -17,9 +17,6 @@
   --color-info: #0b6f50;
   --color-danger: #a21309;
 }
-body {
-  background-color: var(--color-base);
-}
 * {
   transition: 0.2s ease-in-out;
   transition-property: background-color;
@@ -92,13 +89,6 @@ body {
   }
 }
 @media only screen and (max-width: 768px) {
-  html {
-    overflow: scroll;
-  }
-  body {
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
   .mobile-hidden {
     visibility: hidden;
   }
@@ -187,6 +177,10 @@ body {
   font-family: "Titillium Web", sans-serif;
   font-size: 0.8em;
   color: var(--color-font);
+  background-color: var(--color-base);
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 *,
 *::after,
@@ -1049,39 +1043,6 @@ dialog {
   }
   to {
     transform: translateY(100%);
-  }
-}
-
-/* public/css/layout/_divider.css */
-#ctrls-divider {
-  grid-row: 1 / 4;
-  grid-column: 2;
-  background-color: var(--color-base-secondary);
-  background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
-  background-repeat: no-repeat;
-  background-position: center;
-  box-shadow: 3px 0px 6px -3px var(--color-base-tertiary);
-  isolation: isolate;
-  &:hover {
-    cursor: col-resize;
-  }
-}
-#tabview-divider {
-  position: relative;
-  grid-row: 2;
-  grid-column: 3;
-  background-image: url('data:image/svg+xml,<svg viewBox="0 0 100 10" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="10" y1="5" x2="90" y2="5" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: var(--color-base-tertiary);
-  box-shadow: 0px -1px 6px -3px var(--color-base-tertiary);
-  &:hover {
-    cursor: row-resize;
-  }
-}
-@media only screen and (max-width: 768px) {
-  #ctrls-divider {
-    display: none;
   }
 }
 
