--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -75,6 +75,14 @@
   }
 }
 
+.tooltip {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @media only screen and (max-width: 768px) {
   .mobile-hidden {
     visibility: hidden;
