--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -88,6 +88,13 @@
     color: var(--color-font);
   }
 }
+.tooltip {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 @media only screen and (max-width: 768px) {
   .mobile-hidden {
     visibility: hidden;
