--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -135,7 +135,9 @@
     </style>
   </head>
 
-  <body><div class="formwrapper"></div></body>
+  <body>
+    <div class="formwrapper"></div>
+  </body>
 
   <script type="module">
     console.log(`MAPP v${mapp.version}`);
