--- a/public/css/layout/_tabview.css
+++ b/public/css/layout/_tabview.css
@@ -27,13 +27,13 @@
 
     & > .tab > .header {
       color: var(--color-primary);
-      min-width: 8em;
+      min-width: 102px;
       height: 100%;
       display: flex;
       align-items: center;
       white-space: nowrap;
       border: solid 1px var(--color-border);
-      border-radius: 3px 1em 0 0;
+      border-radius: 3px 17px 0 0;
       padding-top: 10px;
       padding-bottom: 10px;
       justify-content: space-around;
@@ -46,7 +46,7 @@
       cursor: pointer;
 
       > .close_tab {
-        font-size: 0.9em;
+        font-size: 12px;
         position: relative;
       }
 
