Tooltip - initial commit.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1314,6 +1314,7 @@ dialog {
     height: 1.5em;
     width: 1.5em;
     font-size: inherit;
+    cursor: help;
   }
   & .drawer.group {
     grid-column: 1 / 3;
