Login - it & es

--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -158,6 +158,12 @@
       option: 'fr',
       title: 'Français'
     },{
+      option: 'it',
+      title: 'Italiano'
+    },{
+      option: 'es',
+      title: 'Español'
+    },{
       option: 'pl',
       title: 'Polski'
     },{
