--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -28,6 +28,8 @@
 
 @import url('./elements/_loading.css');
 
+@import url('./elements/_login_form.css');
+
 @import url('./elements/_pills.css');
 
 @import url('./elements/_searchbox.css');
