Tooltip css moved to common stylesheet.

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -32,6 +32,14 @@
 .hover:hover {
   cursor: pointer;
 }
+.tooltip {
+  -webkit-user-select: none;
+  user-select: none;
+  height: 1.5em;
+  width: 1.5em;
+  font-size: inherit;
+  cursor: help;
+}
 .box-shadow {
   border: 1px solid var(--color-border);
   box-shadow: var(--color-border) 0px 1px 4px;
@@ -1307,14 +1315,6 @@ dialog {
     align-items: center;
     display: flex;
     font-weight: bold;
-  }
-  & .label > .tooltip {
-    -webkit-user-select: none;
-    user-select: none;
-    height: 1.5em;
-    width: 1.5em;
-    font-size: inherit;
-    cursor: help;
   }
   & .drawer.group {
     grid-column: 1 / 3;
