Languages added to options;

--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -67,8 +67,17 @@
       option: 'ja',
       title: '日本語'
     },{
+      option: 'th',
+      title: '泰語'
+    },{
       option: 'zh',
       title: '中文简体'
+    },{
+      option: 'zh_tw',
+      title: '臺灣國語'
+    },{
+      option: 'tr',
+      title: 'Türk'
     }]
 
     const language = languages.find(l => l.option === mapp.language);
