Login form - input object default;

--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -89,14 +89,14 @@
       },
       entries: languages,
       span: language.title,
-    })
+    });
 
-    const formwrapper = document.querySelector('.formwrapper')
+    const formwrapper = document.querySelector('.formwrapper');
 
-    formwrapper.append(selectLanguage)
+    formwrapper.append(selectLanguage);
 
-    const loginForm = mapp.ui.elements.loginForm({})
+    const loginForm = mapp.ui.elements.loginForm();
 
-    formwrapper.append(loginForm)
+    formwrapper.append(loginForm);
   </script>
 </html>
