--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -533,10 +533,10 @@ label.checkbox {
   & > input {
     display: none;
   }
-  & > .material-symbols-outlined:after {
+  & > span.material-symbols-outlined:first-of-type:after {
     content: "check_box_outline_blank";
   }
-  & input:checked + .material-symbols-outlined:after {
+  & input:checked + span.material-symbols-outlined:first-of-type:after {
     content: "select_check_box";
   }
   & input:disabled ~ * {
