--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -32,6 +32,8 @@
 
 @import url('./elements/_pills.css');
 
+@import url('./elements/_register_form.css');
+
 @import url('./elements/_searchbox.css');
 
 @import url('./elements/_slider.css');
