--- a/public/css/elements/_login_form.css
+++ b/public/css/elements/_login_form.css
@@ -1,4 +1,5 @@
 form.login-form {
+  padding: 0 0 4em 0;
   .input-group {
     width: 100%;
     padding: 5px 0;
@@ -17,8 +18,7 @@ form.login-form {
     display: block;
     width: 100%;
 
-    &:before,
-    &:after {
+    &:before, &:after {
       content: '';
       height: 2px;
       width: 0;
