--- a/public/css/elements/_register_form.css
+++ b/public/css/elements/_register_form.css
@@ -1,7 +1,10 @@
 form.register-form {
-  .input-group {
+   padding: 0 0 4em 0;
+  
+   .input-group {
     width: 100%;
     padding: 5px 0;
+    
   }
 
   p {
