--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -791,6 +791,7 @@ dialog {
 
 /* public/css/elements/_login_form.css */
 form.login-form {
+  padding: 0 0 4em 0;
   .input-group {
     width: 100%;
     padding: 5px 0;
@@ -885,6 +886,7 @@ form.login-form {
 
 /* public/css/elements/_register_form.css */
 form.register-form {
+  padding: 0 0 4em 0;
   .input-group {
     width: 100%;
     padding: 5px 0;
