--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -36,7 +36,6 @@
 
   <body class="register_form">
     <div class="formwrapper"></div>
-    <div class="content"></div>
   </body>
   <script type="module">
     console.log(`MAPP v${mapp.version}`);
@@ -65,47 +64,13 @@
       span: language.title,
     });
 
-    const next_steps = mapp.utils.html`
-    <br>
-    <p class="bold">${mapp.dictionary.register_next}</p>
-    <p>${mapp.dictionary.register_next_p1}</p><br>
-    <p>${mapp.dictionary.register_next_p2}</p><br>
-    <p>${mapp.dictionary.register_next_p3}</p><br>`;
-
-    const privacy =  mapp.utils.html`
-    <p class="bold">${mapp.dictionary.register_privacy}</p>
-    <p>${mapp.dictionary.register_privacy_p1}</p><br>
-    <p>${mapp.dictionary.register_privacy_p2}</p><br>
-    <p>${mapp.dictionary.register_privacy_p3}</p><br>`;
-
-    const content = mapp.utils.html`
-    ${privacy}
-    <label class="checkbox">
-      <input id="privacy_agreement" type="checkbox" />
-        <div></div>
-        <span>${mapp.dictionary.register_agree}</span>
-    </label>
-    <br>
-    <button id="btnRegister" type="submit" formaction="register" disabled>
-        ${mapp.dictionary.register_reset}
-    </button>
-    ${next_steps}
-     <a class="switch" href="{{dir}}/public/?login">${mapp.dictionary.register_login}</a>
-    `;
-
-    mapp.utils.render(document.querySelector('.content'), content);
-
     const formwrapper = document.querySelector('.formwrapper');
 
     formwrapper.append(selectLanguage);
 
-    // should this be a ui element?
-    const registerForm = {};
+    const registerForm = mapp.ui.elements.registerForm();
 
-    //formwrapper.append(registerForm);
-
-
-
+    formwrapper.append(registerForm);
 
   </script>
 </html>
