Register - added 'de'

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -50,6 +50,9 @@
       option: 'en',
       title: 'English'
     },{
+      option: 'de',
+      title: 'Deutsch'
+    },{
       option: 'fr',
       title: 'Français'
     }];
