Register - added pl;

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -55,6 +55,9 @@
     },{
       option: 'fr',
       title: 'Français'
+    },{
+      option: 'pl',
+      title: 'Polski'
     }];
 
     const language = languages.find(l => l.option === mapp.language);
