Register - added ja;

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -58,6 +58,9 @@
     },{
       option: 'pl',
       title: 'Polski'
+    },{
+      option: 'ja',
+      title: '日本語'
     }];
 
     const language = languages.find(l => l.option === mapp.language);
