Register - added es;

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -59,6 +59,9 @@
       option: 'pl',
       title: 'Polski'
     },{
+      option: 'es',
+      title: 'Español'
+    },{
       option: 'ja',
       title: '日本語'
     }];
