Register - added it;

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -56,6 +56,9 @@
       option: 'fr',
       title: 'Français'
     },{
+      option: 'it',
+      title: 'Italiano'
+    },{
       option: 'pl',
       title: 'Polski'
     },{
