Register - added zh;

--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -67,6 +67,9 @@
     },{
       option: 'ja',
       title: '日本語'
+    },{
+      option: 'zh',
+      title: '中文简体'
     }];
 
     const language = languages.find(l => l.option === mapp.language);
