--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -69,7 +69,7 @@
       title: '日本語'
     },{
       option: 'th',
-      title: '泰語'
+      title: 'แบบไทย'
     },{
       option: 'zh',
       title: '中文简体'
