--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -68,8 +68,17 @@
       option: 'ja',
       title: '日本語'
     },{
+      option: 'th',
+      title: 'แบบไทย'
+    },{
       option: 'zh',
       title: '中文简体'
+    },{
+      option: 'zh_tw',
+      title: '臺灣國語'
+    },{
+      option: 'tr',
+      title: 'Türk'
     }];
 
     const language = languages.find(l => l.option === mapp.language);
