--- a/public/views/_register.html
+++ b/public/views/_register.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="{{language}}">
   <head data-dir="{{dir}}">
     <title>XYZ | Registration</title>
     <link
