--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -256,7 +256,7 @@ textarea {
   width: 100%;
   resize: none;
   border: none;
-  border-bottom: 1px dotted var(--color-border);
+  border: 1px solid var(--color-border);
   background-color: var(--color-base);
   color: var(--color-font);
   border-radius: 3px;
@@ -299,7 +299,7 @@ input[type=number] {
   border-radius: 3px;
   background-color: var(--color-base);
   color: var(--color-font);
-  border-bottom: 1px dotted var(--color-border);
+  border: 1px solid var(--color-border);
   display: inline-block;
   width: 100%;
   min-width: 2.4ch;
