Added korean dictionary.

--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -71,6 +71,9 @@
       option: 'th',
       title: 'แบบไทย'
     },{
+      option: 'ko',
+      title: '한국어'
+    },{
       option: 'zh',
       title: '中文简体'
     },{
