UI elements tooltip (#2385)
* Tooltip - initial commit.

* Fix for missing params.

* Removed content fallback.

* Docs;

* Tooltip - warning and exit if content not set.

* Tooltip css moved to common stylesheet.

* Tooltip now created on label tag or label class.

* Formatting;

* Infoj - tooltip icon creation in a function.

* Docs;

* Fix for condition;

* clear up documentation

* Check should be on label_element

* tooltip property

---------

Co-authored-by: Dennis Bauszus <dennis.bauszus@geolytix.co.uk>
Co-authored-by: AlexanderGeere <alex.geere@gmail.com>
Co-authored-by: Simon Leech <56163132+simon-leech@users.noreply.github.com>

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -32,6 +32,14 @@
 .hover:hover {
   cursor: pointer;
 }
+.tooltip {
+  -webkit-user-select: none;
+  user-select: none;
+  height: 1.5em;
+  width: 1.5em;
+  font-size: inherit;
+  cursor: help;
+}
 .box-shadow {
   border: 1px solid var(--color-border);
   box-shadow: var(--color-border) 0px 1px 4px;
@@ -525,10 +533,10 @@ label.checkbox {
   & > input {
     display: none;
   }
-  & > .material-symbols-outlined:after {
+  & > span.material-symbols-outlined:first-of-type:after {
     content: "check_box_outline_blank";
   }
-  & input:checked + .material-symbols-outlined:after {
+  & input:checked + span.material-symbols-outlined:first-of-type:after {
     content: "select_check_box";
   }
   & input:disabled ~ * {
@@ -1307,13 +1315,6 @@ dialog {
     align-items: center;
     display: flex;
     font-weight: bold;
-  }
-  & .label > .tooltip {
-    -webkit-user-select: none;
-    user-select: none;
-    height: 1.5em;
-    width: 1.5em;
-    font-size: inherit;
   }
   & .drawer.group {
     grid-column: 1 / 3;
