Register error message.

--- a/public/css/elements/_login_form.css
+++ b/public/css/elements/_login_form.css
@@ -5,6 +5,11 @@ form.login-form {
     padding: 5px 0;
   }
 
+  .asterisk:after {
+    content: "*";
+    color: var(--color-danger);
+  }
+
   p {
     line-height: 1.5;
   }
