--- a/public/views/_login.html
+++ b/public/views/_login.html
@@ -81,7 +81,7 @@
       title: '臺灣國語'
     },{
       option: 'tr',
-      title: 'Türk'
+      title: 'Türkçe'
     }];
 
     if(document.body.dataset.template !== 'login_view') document.title = `XYZ | ${mapp.dictionary.register_title}`;
