--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -36,6 +36,8 @@
 
 @import url('./elements/_toast.css');
 
+@import url('./elements/_toolbar.css');
+
 @import url('./layout/_cloudinary.css');
 
 @import url('./layout/_image_preview.css');
