--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1054,6 +1054,18 @@ dialog {
   }
 }
 
+/* public/css/elements/_toolbar.css */
+.core-menu {
+  position: fixed;
+  top: 0.5em;
+  right: 0.5em;
+  z-index: 1;
+  opacity: 0.95;
+  & > ul li {
+    position: relative;
+  }
+}
+
 /* public/css/layout/_cloudinary.css */
 .drag_and_drop_zone {
   width: 100%;
