--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1069,12 +1069,14 @@ dialog {
     & > li {
       display: flex;
       flex-direction: row-reverse;
+      gap: 0.5em;
       .submenu {
         display: flex;
+        gap: 0.5em;
       }
     }
   }
-  & > ul > li > button {
+  button {
     margin-bottom: 10px;
     background-color: var(--color-base-tertiary);
     box-shadow: 1px 1px 3px var(--color-base-tertiary);
