--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1076,7 +1076,8 @@ dialog {
       }
     }
   }
-  button {
+  button,
+  a {
     margin-bottom: 10px;
     background-color: var(--color-base-tertiary);
     box-shadow: 1px 1px 3px var(--color-base-tertiary);
@@ -1086,6 +1087,9 @@ dialog {
     width: 3em;
     height: 3em;
     text-align: center;
+  }
+  a {
+    display: inline-block;
   }
 }
 
